--- a/app/src/main/res/layout/activity_my_list_status.xml
+++ b/app/src/main/res/layout/activity_my_list_status.xml
@@ -6,16 +6,14 @@
     android:layout_height="match_parent"
     tools:context="com.masahirosaito.twitterlistview.MyListStatusActivity">
 
+
     <LinearLayout
         android:id="@+id/my_list_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        app:layout_constraintRight_toRightOf="parent">
 
         <ListView
             android:id="@+id/my_list_status_view"
@@ -23,5 +21,16 @@
             android:layout_height="match_parent" />
 
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
